# harness_template

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  doc.md  pyproject.toml  requirements-dev.txt  requirements-postgres.txt  requirements-rag.txt  requirements-sqlite.txt  requirements.txt
agent/: actioner.py  clarification.py  executor.py  learner.py  memorize.py  memory_review.py  planner.py  reviewer.py
api/: schemas.py  server.py
app/: __init__.py  main.py
audit/: __init__.py  logger.py
config/: __init__.py  prompts.py  prompts.yaml  settings.yaml
console/: README.md  package-lock.json  package.json
context/: __init__.py  pipeline.py
docs/: ARCHITECTURE.md  ASYNCIO.md  CICD.md  DESIGN.md  FRONTEND.md  HISTORY_GUIDE.md  IMPLEMENTATION.md  LANGGRAPH.md  PLANS_GUIDE.md  PRODUCT.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  REPO_COLLAB_GUIDE.md  SECURITY.md  SUPPLY_CHAIN_SECURITY.md  asyncio.md  langgraph.md
graph/: builder.py  routing.py  schemas.py  state.py
graphify-out/: .graphify_labels.json  .graphify_labels.json.sig  GRAPH_REPORT.md  GRAPH_TREE.html  manifest.json
harness_mcp/: __init__.py  client.py  config.py  schemas.py  tools.py
llm/: providers.py  retry.py
mcp/: README.md  servers.example.json
mcp_config/: servers.example.json
memory/: __init__.py  checkpoint.py  checkpoint_config.py
migrations/: 001_create_agent_audit_log.sql  002_rag_memory.sql
rag/: __init__.py  config.py  embeddings.py  schemas.py  service.py
skills/: __init__.py  context.py  distill.py  inject.py  (+3 more)
(+207 files in other folders)
